--- a/SamsWarehouse/Views/Shared/_Layout.cshtml
+++ b/SamsWarehouse/Views/Shared/_Layout.cshtml
@@ -13,9 +13,9 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm bg-primary border-bottom box-shadow mb-3 navbar-static-top">
             <div class="container-fluid">
-                <div>
+                <a class="nav-link" asp-area="" asp-controller="Product" asp-action="Index">
                 <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 422 437" height="50" width="50"><path d="m400.5 201.5-274.5 45c-25.5 22.5 1.504 42 1.504 42L396 290v37.5l-295.5-3c-12-7.5-20.992-31.5-24-52.5-3-21 19.5-43.5 19.5-43.5L49.508 53H24l-6-33h64.504L99 74l307.5-1.5-6 129zM153 341c22.367 0 40.5 18.129 40.5 40.5 0 22.367-18.133 40.5-40.5 40.5-22.371 0-40.496-18.133-40.496-40.5 0-22.371 18.125-40.5 40.496-40.5zm198 0c22.375 0 40.5 18.129 40.5 40.5 0 22.367-18.125 40.5-40.5 40.5-22.363 0-40.5-18.133-40.5-40.5 0-22.371 18.137-40.5 40.5-40.5z" clip-rule="evenodd" fill-rule="evenodd" class="logo"/><text y="178.575" x="140.101" class="logo svgtext" xml:space="preserve"><tspan y="178.575" x="140.101">S W</tspan></text></svg>Sam's Warehouse
-                </div>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
