refining ui to match guidelines

--- a/SamsWarehouse/Views/Cart/CartModal.cshtml
+++ b/SamsWarehouse/Views/Cart/CartModal.cshtml
@@ -14,7 +14,7 @@
 }
 <div class="offcanvas-header">
     <div class="btn-group dropdown w-100">
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             @currentCart.Name
         </button>
         <ul class="dropdown-menu w-100" >
@@ -85,7 +85,7 @@ else
         <div class="row">
             <div class="col-3">
                 <a asp-area="" asp-controller="Product" asp-action="Details" asp-route-id="@product.ProductId" class="text-decoration-none form-text">
-                    <img src="@Url.Content("~/images/thumbnail/" + product.ProductId +"/"+ product.ProductId +"_1.webp")" alt="..." class="img-thumbnail">
+                        <img src="@Url.Content("~/images/thumbnail/" + product.ProductId +"/"+ product.ProductId +"_1.webp")" alt="..." class="img-thumbnail bg-primary">
                 </a>
             </div>
             <div class="col-8">
