--- a/SamsWarehouse/Views/Product/Details.cshtml
+++ b/SamsWarehouse/Views/Product/Details.cshtml
@@ -36,7 +36,7 @@
 
             
         </div>
-        <div class="col-6 ">
+        <div class="col-6 bg-body-tertiary rounded-3 p-4">
             <div>
             <h2>@Model.Title</h2>
             <h4>@Model.Size</h4>
