--- a/SamsWarehouse/Views/Shared/_Layout.cshtml
+++ b/SamsWarehouse/Views/Shared/_Layout.cshtml
@@ -42,9 +42,9 @@
                     {
                         //logged in
 
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                             <img src="~/Logo.svg" height="25" width="25">Cart
-                            <span class="badge ms-1 rounded-pill" id="price"></span>
+                            <span class="text" id="price"></span>
 
                             </button>
                         
