--- a/SamsWarehouse/Views/Product/Details.cshtml
+++ b/SamsWarehouse/Views/Product/Details.cshtml
@@ -6,7 +6,7 @@
 
 @*<h1>@Model.Title</h1>*@
 <div>
-    <a class="btn btn-outline-secondary m-2 mt-auto" asp-action="Index">Back to List</a>
+    <a class="btn btn-outline-secondary m-2 mt-auto" asp-action="Index">Back to Products</a>
 </div>
 <div class="container">
     <div class="row">
