--- a/SamsWarehouse/wwwroot/css/aboutUs.css
+++ b/SamsWarehouse/wwwroot/css/aboutUs.css
@@ -1,7 +1,7 @@
 ﻿.video-background-holder {
     position: relative;
     background-color: black;
-    height: calc(100vh - 72px);
+    height: calc(85vh);
     min-height: 25rem;
     width: 100%;
     overflow: hidden;
