added the ability to use the enter key to submit on the login, signup, and cart create pages.

--- a/SamsWarehouse/Views/Auth/Login.cshtml
+++ b/SamsWarehouse/Views/Auth/Login.cshtml
@@ -41,8 +41,9 @@
                                         <label asp-for="Password"  class="control-label"></label>
                                         <span asp-validation-for="Password" class="text-danger"></span>
                                     </div>
+                                    <input id="loginBtn" class="btn btn-secondary mt-3 w-100" type="submit" value="Login" >
                                 </form>
-                                <button id="loginBtn" class="btn btn-secondary mt-3 w-100" />Login</button>
+                                
                             </div>
                             <hr />
                             <div class="mx-5">
@@ -60,12 +61,12 @@
         </div>
     </section>
 
-<script src="~/js/login.js"></script>
+
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-
+    <script src="~/js/login.js"></script>
 </body>
 </html>
