--- a/SamsWarehouse/Views/Product/Index.cshtml
+++ b/SamsWarehouse/Views/Product/Index.cshtml
@@ -20,10 +20,9 @@
                     <a asp-area="" asp-controller="Product" asp-action="Details" asp-route-id="@product.Id" >
                         <img class="card-img-top bg-primary p-2" src="@Url.Content("~/images/thumbnail/" + product.Id +"/"+ product.Id +"_1.webp")">
                     </a>
-                    <!-- Product details -->
                     <div class="card-body p-2 pt-2 bg-body-secondary">
                         <div class="text-center">
-                            <!-- Product name -->
+                            <!-- Product title -->
                             <a asp-area="" asp-controller="Product" asp-action="Details" asp-route-id="@product.Id" class="text-decoration-none form-text">
                                 <h5 class="fw-bolder">@product.Title</h5>
                             </a>
@@ -31,7 +30,6 @@
                             @product.Price.ToString("c2")
                         </div>
                     </div>
-                    <!-- Product actions -->
                     @if (Context.Session.GetInt32("ID") != null)
                     {
                         <div class="card-footer p-2 pt-2 border-top-0">
