added more client side validation

--- a/SamsWarehouse/Views/Auth/Login.cshtml
+++ b/SamsWarehouse/Views/Auth/Login.cshtml
@@ -27,7 +27,7 @@
                                     <b>LOGIN</b>
                                 </div>
                                 <hr />
-                                <form asp-action="login" id="fields">
+                                <form asp-action="login" id="fields" class="needs-validation" novalidate>
                                     @*<label id="result" class="control-label"></label>*@
                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                     <div class="form-floating mb-3 w-100" >
