--- a/SamsWarehouse/Views/Product/Index.cshtml
+++ b/SamsWarehouse/Views/Product/Index.cshtml
@@ -18,7 +18,7 @@
                 <div class="card h-100 shadow">
                     <!-- Product image -->
                     <a asp-area="" asp-controller="Product" asp-action="Details" asp-route-id="@product.Id" >
-                        <img class="card-img-top bg-primary p-2" src="@Url.Content("~/images/thumbnail/" + product.Id +"/"+ product.Id +"_1.webp")">
+                        <img class="card-img-top bg-primary p-2" src="@Url.Content("~/images/thumbnail/" + product.Id +"/"+ product.Id +"_1.webp")" height="100%" width="auto">
                     </a>
                     <div class="card-body p-2 pt-2 bg-body-secondary">
                         <div class="text-center">
