--- a/SamsWarehouse/Views/Product/Privacy.cshtml
+++ b/SamsWarehouse/Views/Product/Privacy.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
+    ViewData["Description"] = "Sam's Warehouse, Stocking all your food needs.";
 }
 <h1>@ViewData["Title"]</h1>
 
