--- a/SamsWarehouse/Views/About/Index.cshtml
+++ b/SamsWarehouse/Views/About/Index.cshtml
@@ -1,7 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Sam's Warehouse";
+    ViewData["Description"] = "Sam's Warehouse, Stocking all your food needs.";
 }
 
 <link rel="stylesheet" href="~/css/aboutUs.css" asp-append-version="true" />
@@ -14,7 +13,7 @@
     <div class="video-background-content h-100">
         <div class="d-flex h-100 text-center align-items-center">
             <div class="w-100 text-white">
-                <img width=100 src="~/Logo.svg" class="bg-body rounded-3"></img>
+                <img width=100 src="~/Logo.svg" class="bg-body rounded-3" alt="Logo"></img>
                 <p class="lead mb-0">Sam's Warehouse</p>
                 <p class="lead mb-o">Stocking your food needs</p>
             </div>
