--- a/SamsWarehouse/Views/Auth/Signup.cshtml
+++ b/SamsWarehouse/Views/Auth/Signup.cshtml
@@ -1,71 +1,60 @@
 ﻿@model SamsWarehouse.Models.Data.LoginDTO;
 @{
     ViewData["Title"] = "Signup";
+    ViewData["Description"] = "Signup to Sam's Warehouse.";
 }
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" name="description" content="Login to Sam's Warehouse" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="~/scss/custom.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SamsWarehouse.styles.css" asp-append-version="true" />
+    <title>@ViewData["Title"] - SamsWarehouse</title>
 </head>
 <body>
+    <div class="container py-3">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-6">
+                <div class="card bg-primary rounded-4 p-5">
+                    <div class="m-5">
 
-    <section class="vh-100 gradient-custom">
-        <div class="container py-5 h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                    <div class="card bg-primary rounded-4" >
-                        <div class="card-body p-5">
-
-                            <div class="m-5">
-
-                                <img src="~/Logo.svg" height="100" width="100">Sam's Warehouse</img>
-                                <div class="text-center">
-                                    <b>SIGNUP</b>
-                                </div>
-                                <hr />
-                                <form asp-action="signup" id="fields">
-                                  
-                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                    <div class="form-floating mb-3 w-100">
-
-                                        <input asp-for="Email" class="form-control w-100" placeholder="johndoe@example.com" type="email" />
-                                        <label asp-for="Email" class="control-label"></label>
-                                        <span asp-validation-for="Email" class="text-danger"></span>
-                                    </div>
-                                    <div class="form-floating w-100">
-                                        <input asp-for="Password" class="form-control w-100" placeholder="Password123" type="password" />
-                                        <label asp-for="Password" class="control-label"></label>
-                                        <span asp-validation-for="Password" class="text-danger"></span>
-                                    </div>
-                                    <input id="signupBtn" class="btn btn-secondary mt-3 w-100" type="submit" value="Signup">
-                                </form>
-                            </div>
-                            <hr />
-                            <div class="mx-5">
-                                <div class="text-center mb-2">
-                                    <b>Already have an account?</b>
-                                </div>
-                                <a class="btn btn-outline-secondary w-100" asp-area="" asp-controller="Auth" asp-action="login">Login</a>
-
-                            </div>
-
+                        <img src="~/Logo.svg" height="100" width="100" alt="Logo"><b class="text-secondary">Sam's Warehouse</b></img>
+                        <div class="text-center text-secondary">
+                            <b class="d-inline">Signup</b>
                         </div>
+                        <hr />
+                        <form asp-action="signup" id="fields" class="needs-validation" novalidate>
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="form-floating mb-3 w-100">
+                                <input asp-for="Email" class="form-control w-100" placeholder="johndoe@example.com" type="email" />
+                                <label asp-for="Email" class="control-label"></label>
+                                <span asp-validation-for="Email" class="text-danger"></span>
+                            </div>
+                            <div class="form-floating w-100">
+                                <input asp-for="Password" class="form-control w-100" placeholder="Password123" type="password" />
+                                <label asp-for="Password" class="control-label"></label>
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
+                            <input id="signupBtn" class="btn btn-secondary mt-3 w-100" type="submit" value="Signup">
+                        </form>
+                        <hr />
+                        <div class="text-center mb-2 text-secondary">
+                            <b>Already have an account?</b>
+                        </div>
+                        <a class="btn btn-outline-secondary w-100" asp-area="" asp-controller="Auth" asp-action="Login">Login</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
-    
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-    <script src="~/js/signup.js"></script>
+    </div>
 </body>
 </html>
+<script src="~/js/site.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/js/signup.js"></script>
