--- a/SamsWarehouse/Views/Cart/CartModal.cshtml
+++ b/SamsWarehouse/Views/Cart/CartModal.cshtml
@@ -31,7 +31,7 @@
                         <button class="dropdown-item justify-content-lg-between" data-switch-cart-id="@cart.Id">
                             @cart.Name
                         </button>
-                        <img type="button" src="/delete.svg" width=25 height=25 data-remove-cart-id="@cart.Id">     
+                        <img type="button" src="/delete.svg" width=25 height=25 data-remove-cart-id="@cart.Id" alt="Delete">
                 }
                 </li>
             }
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-3">
                     <a asp-area="" asp-controller="Product" asp-action="Details" asp-route-id="@product.ProductId" class="text-decoration-none form-text">
-                        <img src="@Url.Content("~/images/" + product.ProductId +"_1-512w.webp")" alt="..." class="img-thumbnail bg-primary">
+                        <img src="@Url.Content("~/images/" + product.ProductId +"_1-512w.webp")" alt="Product Image" class="img-thumbnail bg-primary">
                     </a>
                 </div>
                 <div class="col-8">
@@ -87,7 +87,7 @@
                         <div class="col-12">
                             <div class="d-flex align-items-center">
                                 <input min="0" name="quantity" value="@product.Quantity" type="number" class="form-control form-control-sm" data-set-item-quantity-id="@product.ProductId">
-                                <img type="button" src="/delete.svg" width=25 height=25 data-remove-from-cart-id="@product.ProductId">
+                                <img type="button" src="/delete.svg" width=25 height=25 data-remove-from-cart-id="@product.ProductId" alt="Delete">
                             </div>
                         </div>
                     </div>
